--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/Rasp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.JCPanel.jar=lib/JCPanel.jar
 file.reference.junit.jar=lib\\junit.jar
 file.reference.pi4j-core-javadoc.jar=lib\\pi4j-core-javadoc.jar
 file.reference.pi4j-core-sources.jar=lib\\pi4j-core-sources.jar
@@ -69,7 +70,8 @@ javac.classpath=\
     ${file.reference.pi4j-service.jar}:\
     ${file.reference.substance.jar}:\
     ${libs.JfreeChart.classpath}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.JCPanel.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
