--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,6 +47,7 @@ file.reference.pi4j-gpio-extension.jar=lib\\pi4j-gpio-extension.jar
 file.reference.pi4j-service-javadoc.jar=lib\\pi4j-service-javadoc.jar
 file.reference.pi4j-service-sources.jar=lib\\pi4j-service-sources.jar
 file.reference.pi4j-service.jar=lib\\pi4j-service.jar
+file.reference.pid-0.0.1-SNAPSHOT.jar=pid-0.0.1-SNAPSHOT.jar
 file.reference.substance.jar=substance.jar
 includes=**
 jar.compress=false
@@ -71,7 +72,8 @@ javac.classpath=\
     ${file.reference.substance.jar}:\
     ${libs.JfreeChart.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.JCPanel.jar}
+    ${file.reference.JCPanel.jar}:\
+    ${file.reference.pid-0.0.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
